overflow fix

--- a/assets/style/scss/_base.scss
+++ b/assets/style/scss/_base.scss
@@ -9,6 +9,8 @@
 
 body{
     box-sizing: border-box;
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 
