--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,6 +13,8 @@
 
 body {
   box-sizing: border-box;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 .header__profile {
